# wagtail-feathers

./: .gitignore  CHANGELOG.md  DEMO_ENHANCEMENT_PLAN.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  tox.ini  vite.config.mjs
.github/workflows/: test.yml
demo/: README.md  requirements.txt  settings.py  urls.py  wsgi.py
demo/showcase/: apps.py  models.py  viewsets.py  wagtail_hooks.py
demo/showcase/management/commands/: setup_demo_data.py
demo/showcase/migrations/: 0001_initial.py  0002_remove_articlepage_display_authors_and_more.py  0003_alter_articleindexpage_header_and_more.py
demo/themes/quantum/: theme.json
demo/themes/quantum/static/assets/: stimulus-CZA9Too6.js
demo/themes/quantum/static/css/: admin.css  main.css
demo/themes/quantum/static/js/: scrollspy.js  stimulus_admin_feathers.js  theme.js
demo/themes/quantum/templates/: 400.html  403.html  404.html  500.html  base.html  base_content_page.html  base_page.html
frontend/src/javascript/: admin.js  feathers_admin.js
frontend/src/javascript/controllers/: classifier-chooser-controller.js  classifier-modal-controller.js
frontend/src/styles/: _admin_blocks.css  _admin_classifiers.css  admin.css
src/wagtail_feathers/: __init__.py  apps.py  blocks.py  context_processors.py  factories.py  faq_chooser.py  fields.py  forms.py  helpers.py  middleware.py  mixins.py  panels.py  struct_values.py  styles.py  themes.py  tocbot.py  version.py  views.py  wagtail_hooks.py  widgets.py
src/wagtail_feathers/fixtures/: sample_taxonomy.json
src/wagtail_feathers/management/commands/: create_sample_taxonomy.py  manage_categories.py  tailwind_source.py  themes.py
src/wagtail_feathers/migrations/: 0001_initial.py  0002_alter_featherbasepage_body.py  0003_alter_classifiergroup_options.py  0003_alter_featherbasepage_body.py  0004_add_translatable_fields_nullable.py  0004_alter_flatmenu_slug_alter_footernavigation_slug_and_more.py  0005_alter_featherbasepage_body.py  0005_populate_translation_keys.py  0006_alter_sitesettings_words_per_minute.py  0006_make_translatable_fields_required.py  0007_alter_featherbasepage_body.py  0007_remove_classifier_unique_classifier_group_name_and_more.py  0008_alter_countrygroup_countries.py  0008_alter_featherbasepage_body.py  0008_classifiergroup_slug.py  0009_alter_countrygroup_countries_and_more.py  0009_category_add_translatable_fields.py  0010_alter_countrygroup_countries_and_more.py  0010_alter_pageauthor_person_alter_pageauthor_type.py  0011_countrygroup.py  0012_alter_faqcategory_slug.py  0013_rename_faq_models.py  0014_alter_faq_name.py  0015_alter_faqitem_question.py  0016_alter_featherbasepage_body.py  0017_alter_featherbasepage_body.py
src/wagtail_feathers/models/: __init__.py  author.py  base.py  errors.py  faq.py  geographic.py  inline.py  navigation.py  person.py  reading_time.py  seo.py  settings.py  social.py  specialized_pages.py  taxonomy.py  utils.py
src/wagtail_feathers/static/css/: feather_admin.css  feathers_admin.css
src/wagtail_feathers/static/js/: admin.js  feathers_admin.js  wagtail_feathers_admin.js
src/wagtail_feathers/templatetags/: category_tags.py  feathers_tags.py  navigation_tags.py  pagination_tags.py  placeholder_tags.py  querystring_tags.py  reading_time_tags.py  seo_tags.py  social_tags.py  svg_tags.py  tocbot_tags.py
src/wagtail_feathers/utils/: query.py
src/wagtail_feathers/viewsets/: __init__.py  author.py  choosers.py  components.py  faq_chooser.py  geographic.py  navigation.py  person.py  social.py  taxonomy.py  viewset_groups.py
tests/: conftest.py  settings.py  test_multisite_simple.py  test_multisite_themes.py  test_related_pages.py  test_struct_values.py  test_taxonomy.py  test_theme_integration.py  test_themes.py  urls.py
(+59 files in other folders)
